update on my code

--- a/PerosnalSite/Views/Home/Index.cshtml
+++ b/PerosnalSite/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-background">
+    <div class="home-content">
+    <h1 class="display-4">WELCOME TO MY PERSONAL WEBSITE</h1>
+    <p>This is my digital website for MIS 3033 that showcases a little bit about me!</p>
+        <a asp-controller="Home" asp-action="About" class="btn btn-primary">Learn More About Me</a>
+</div>
 </div>
