--- a/PerosnalSite/wwwroot/css/site.css
+++ b/PerosnalSite/wwwroot/css/site.css
@@ -18,5 +18,65 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 10px;
+  background-color:mintcream;
+}
+.home-background {
+    background-image: url('https://t4.ftcdn.net/jpg/02/10/45/95/360_F_210459536_XmLDEcKq2DpeNLVmheuWeu9NM9aGKnih.jpg');
+    background-size:cover;
+    background-position: center;
+    height: 100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:navy;
+    font-size:24px;
+    text-shadow: 4px 4px 8px rgba(0,0,0,0.9);
+    text-align: center;
+}
+.btn{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: white;
+    background-color: rgba(100,149,237,0.5);
+    border-radius:5px;
+    transition: background-color 0.3s ease;
+}
+.btn-hover{
+    background-color:darkorchid;
+}
+.styled-card {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: navy;
+    background-color:peachpuff; 
+    padding: 15px;
+    border-left: 5px solid navy;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 20px auto;
+}
+.styled-paragraph {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    line-height: 1.6;
+    color: navy;
+    background-color: peachpuff;
+    padding: 15px;
+    border-left: 5px solid navy;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 20px auto;
+}
+.card-title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    color: navy;
+    text-align: center; 
+    margin-bottom: 15px;
 }
