--- a/PerosnalSite/Views/Home/About.cshtml
+++ b/PerosnalSite/Views/Home/About.cshtml
@@ -18,7 +18,7 @@
             <p class="card-text">
                 Hi, connect with me on LinkedIn! I'd love to connect with you!
             </p>
-            <a href="https://www.linkedin.com/in/avery-connot-1b72231b3/" class="btn btn-dark">View LinkedIn</a>
+            <a href="https://www.linkedin.com/in/avery-connot-1b72231b3/" class="btn btn-dark" target="_blank">View LinkedIn</a>
         </div>
     </div>
 </div>
