--- a/PerosnalSite/Views/Home/Skills.cshtml
+++ b/PerosnalSite/Views/Home/Skills.cshtml
@@ -3,18 +3,20 @@
 *@
 @{
 }
-<h1>Skill Sets</h1>
-<h3>Throughout my academic career I have learned a comprehensive list of skills</h3>
-<p>My Skills include:</p>
-<ul>
-    <li>Adobe Photoshop </li>
-    <li>Adobe Illustrator </li>
-    <li>Adobe InDesign </li>
-    <li>Microsoft Excel </li>
-    <li>Microsoft Power Point </li>
-    <li>Microsoft Word </li>
-    <li>C# Code </li>
-    <li>Python Code </li>
-    <li>SQL Server</li>
-    <li>Power BI</li>
-</ul>
+<div class="skills-section">
+    <h1>Skill Sets</h1>
+    <h3>Throughout my academic career, I have learned a comprehensive list of skills:</h3>
+    <p>My skills include:</p>
+    <ul>
+        <li>Adobe Photoshop</li>
+        <li>Adobe Illustrator</li>
+        <li>Adobe InDesign</li>
+        <li>Microsoft Excel</li>
+        <li>Microsoft PowerPoint</li>
+        <li>Microsoft Word</li>
+        <li>C# Code</li>
+        <li>Python Code</li>
+        <li>SQL Server</li>
+        <li>Power BI</li>
+    </ul>
+</div>
