--- a/PerosnalSite/wwwroot/css/site.css
+++ b/PerosnalSite/wwwroot/css/site.css
@@ -51,7 +51,7 @@ body {
     font-size: 18px;
     line-height: 1.6;
     color: navy;
-    background-color:peachpuff; 
+    background-color:lightblue; 
     padding: 15px;
     border-left: 5px solid navy;
     border-radius: 5px;
@@ -64,7 +64,7 @@ body {
     font-size: 18px;
     line-height: 1.6;
     color: navy;
-    background-color: peachpuff;
+    background-color:lightblue;
     padding: 15px;
     border-left: 5px solid navy;
     border-radius: 5px;
@@ -79,4 +79,80 @@ body {
     color: navy;
     text-align: center; 
     margin-bottom: 15px;
+}
+.project-header {
+    margin: 20px 0; 
+}
+
+    .project-header h1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 32px;
+        font-weight: bold;
+        color: navy; 
+        text-align: center; 
+        margin-bottom: 10px; 
+    }
+
+    .project-header p {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px; 
+        color: navy; 
+        text-align: center; 
+    }
+.skills-section {
+    background-color: #f0f8ff; 
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 30px auto; 
+    text-align: center; 
+}
+
+    .skills-section h1 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 32px;
+        font-weight: bold;
+        color: navy; 
+        margin-bottom: 15px;
+    }
+
+    .skills-section h3 {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 22px;
+        font-weight: normal;
+        color: navy;
+        margin-bottom: 10px;
+    }
+
+    .skills-section p {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        color: navy;
+        margin-bottom: 10px;
+    }
+
+    .skills-section ul {
+        list-style: none;
+        padding: 0;
+    }
+
+        .skills-section ul li {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 18px;
+            color: navy;
+            background-color: lightblue;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            display: inline-block;
+        }
+.projects-title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    font-size: 28px; 
+    font-weight: bold; 
+    color: navy; 
+    text-transform: uppercase; 
+    margin-bottom: 20px; 
 }
